# Banking_operations_widget

./: .env.example  README.md  main.py  pyproject.toml
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  services.py  utils.py  utils_2.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_services.py  test_utils.py  test_widget.py
